RESOLVED FIXED313500
Fix imported/w3c/web-platform-tests/css/css-tables/absolute-tables-015.html
https://bugs.webkit.org/show_bug.cgi?id=313500
Summary Fix imported/w3c/web-platform-tests/css/css-tables/absolute-tables-015.html
alan
Reported 2026-04-27 17:07:10 PDT
ssia
Attachments
Patch (6.08 KB, patch)
2026-04-27 17:18 PDT, alan
no flags
[fast-cq]Patch (7.36 KB, patch)
2026-04-28 07:27 PDT, alan
no flags
alan
Comment 1 2026-04-27 17:18:35 PDT
Ahmad Saleem
Comment 2 2026-04-27 22:47:09 PDT
@Alan - I have open PR fixing this test here - https://github.com/WebKit/WebKit/pull/57628 (plus all other absolute-tables-*) test cases, which we fail.
Antti Koivisto
Comment 3 2026-04-28 00:07:06 PDT
Comment on attachment 479346 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=479346&action=review > LayoutTests/imported/w3c/web-platform-tests/css/css-tables/height-distribution/percentage-sizing-of-table-cell-children-expected.txt:44 > -PASS Unresolvable percentage widths are resolved as auto in first pass (replaced elements) > +FAIL Unresolvable percentage widths are resolved as auto in first pass (replaced elements) assert_equals: expected 142 but got 0 does this test need updating?
alan
Comment 4 2026-04-28 05:22:01 PDT
(In reply to Antti Koivisto from comment #3) > Comment on attachment 479346 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=479346&action=review > > > LayoutTests/imported/w3c/web-platform-tests/css/css-tables/height-distribution/percentage-sizing-of-table-cell-children-expected.txt:44 > > -PASS Unresolvable percentage widths are resolved as auto in first pass (replaced elements) > > +FAIL Unresolvable percentage widths are resolved as auto in first pass (replaced elements) assert_equals: expected 142 but got 0 > > does this test need updating? Yes.
alan
Comment 5 2026-04-28 07:27:53 PDT
Created attachment 479351 [details] [fast-cq]Patch
alan
Comment 6 2026-04-28 07:34:53 PDT
(In reply to Ahmad Saleem from comment #2) > @Alan - I have open PR fixing this test here - > https://github.com/WebKit/WebKit/pull/57628 (plus all other > absolute-tables-*) test cases, which we fail. must have missed it. let me take a look.
EWS
Comment 7 2026-04-28 08:53:03 PDT
Committed 312204@main (4ab1c5ad0170): <https://commits.webkit.org/312204@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479351 [details].
Radar WebKit Bug Importer
Comment 8 2026-04-28 08:54:13 PDT
Note You need to log in before you can comment on or make changes to this bug.